<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nave.segundaguerra</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_gerenciador">Gerenciador_activity</string>
    <string name="title_activity_batalha">BatalhaActivity</string>
    <string name="title_activity_creditos">CreditosActivity</string>
    <string name="title_activity_dicas">DicasActivity</string>
    <string name="title_activity_fim_de_jogo">FimDeJogoActivity</string>
    <string name="FIMDEJOGO_Nome">Nome</string>
    <string name="FIMDEJOGO_Matou">0000</string>
    <string name="FIMDEJOGO_Morreu">8001</string>
    <string name="CREDITOS_Nome">Nome do Integrante</string>
    <string name="CREDITOS_Funcao">Função</string>
    <string name="title_activity_conect">Conect</string>
    <string name="action_settings">Settings</string>
    <string name="DICAS_Retroceder">Retroceder</string>
    <string name="DICAS_Avancar">Avançar</string>
    <string name="DICAS_Texto">Cuidado ao detonar a mina. Um aliado pode estar lá…</string>

</resources>